--- a/homepage/contact.css
+++ b/homepage/contact.css
@@ -41,18 +41,42 @@ body {
     background-color: white;
     height: 5px;
 }
-.contact {
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 999px;
-    cursor: pointer;
-    padding: 8px 18px;
-    font-size: 14px;
-    font-weight: 400;
-    margin-right: 60px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+.contact-sectie{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+
+    padding: 80px 0;
+    gap: 20px;                /
+}
+.contact-gegevens{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contact-gegevens h1{
+    margin: 10px;
+    font-size: 90px;
+}
+.media-grid{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+    flex-wrap: wrap;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.media-grid img{
+    width: 110px;
+    height: 110px;
+    object-fit: contain;
+}
+.contact-info {
+    font-size: 45px;
 }
 .contact-button {
     background-color: white;
@@ -71,26 +95,4 @@ body {
     margin-bottom: 20px;
     margin-top: 20px;
     white-space: nowrap;
-}
-.projecten-grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-    padding: 80px 10%;
-}
-.project-kaart{
-    background-color: black;
-    color: white;
-    text-align: center;
-}
-.project-kaart h2{
-    margin-bottom: 20px;
-    font-size: 28px;
-}
-.project-kaart img{
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 16px;
-    margin-top: 50px;
 }
