--- a/homepage/project-scripting.css
+++ b/homepage/project-scripting.css
@@ -59,3 +59,91 @@ body {
     margin-top: 20px;
     white-space: nowrap;
 }
+.project{
+    display: flex;
+    align-items: center;
+    gap: 80px;
+    padding: 120px 10%;
+}
+.project img{
+    height: 700px;
+    width: 500px;
+    max-width: 100%;
+    object-fit: cover;
+}
+.gallery-grid {
+    padding: 80px 10%;
+}
+.fotos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+.fotos img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    border-radius: 16px;
+}
+#lightbox {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.9);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+#lightbox-close {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+#lightbox-close:hover {
+    color: #ccc;
+}
+#lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+    border-radius: 12px;
+}
+.persoonlijk {
+    display: flex;
+    justify-content: center;
+    padding: 80px 10%;
+}
+.teksteninfo {
+    text-align: center;
+    max-width: 900px;
+}
+.teksteninfo h1 {
+    color: white;
+    font-size: 45px;
+}
+.teksteninfo p {
+    margin-top: 30px;
+    line-height: 1.6;
+    color: white;
+    font-size: 20px;
+}
+.horizontale-balk-2 {
+    width: 96%;
+    height: 6px;
+    background-color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+video {
+    width: 100%;
+    max-width: 900px;
+    display: block;
+    margin: 60px auto;
+    border-radius: 16px;
+}
+
+
