--- a/homepage/projecten.css
+++ b/homepage/projecten.css
@@ -72,12 +72,6 @@ body {
     margin-top: 20px;
     white-space: nowrap;
 }
-.projecten-grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-    padding: 80px 10%;
-}
 .project-kaart{
     background-color: black;
     color: white;
@@ -85,12 +79,41 @@ body {
 }
 .project-kaart h2{
     margin-bottom: 20px;
-    font-size: 28px;
+    font-size: 20px;
+    min-height: 72px;
 }
 .project-kaart img{
     width: 100%;
     height: 300px;
     object-fit: cover;
     border-radius: 16px;
-    margin-top: 50px;
+    margin-top: 40px;
+}
+.projecten-grid a {
+    text-decoration: none;
+    color: inherit;
+}
+.projecten-grid a:nth-of-type(3) {
+    grid-column: 1 / span 2;
+    grid-row: 2;
+}
+.projecten-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 2px 1fr;
+    column-gap: 80px;
+    row-gap: 80px;
+    padding: 80px 10%;
+    align-items: start;
+}
+.projecten-grid a:nth-of-type(1){ grid-column: 1; grid-row: 1; }
+.projecten-grid a:nth-of-type(2){ grid-column: 2; grid-row: 1; }
+.projecten-grid a:nth-of-type(3){ grid-column: 4; grid-row: 1; }
+.scheidingslijn{
+    grid-column: 3;
+    grid-row: 1;
+    width: 2px;
+    height: 100%;
+    background: white;
+    justify-self: center;
+    align-self: stretch;
 }
