--- a/homepage/project-wico.css
+++ b/homepage/project-wico.css
@@ -89,3 +89,12 @@ body {
     margin-left: 24%;
     margin-bottom: 40px;
 }
+.footer {
+    text-align: center;
+    margin: 40px 0;
+}
+.footer a {
+    color: white;
+    font-size: 20px;
+    text-decoration: underline;
+}
