--- a/homepage/over-mij.css
+++ b/homepage/over-mij.css
@@ -113,3 +113,12 @@ body {
     object-fit: cover;
     border-radius: 16px;
 }
+.footer {
+    text-align: center;
+    margin: 40px 0;
+}
+.footer a {
+    color: white;
+    font-size: 20px;
+    text-decoration: underline;
+}
