--- a/homepage/projecten.css
+++ b/homepage/projecten.css
@@ -117,3 +117,12 @@ body {
     justify-self: center;
     align-self: stretch;
 }
+.footer {
+    text-align: center;
+    margin: 40px 0;
+}
+.footer a {
+    color: white;
+    font-size: 20px;
+    text-decoration: underline;
+}
